--- a/frontend/core/src/main/webapp/static/less/notifications.less
+++ b/frontend/core/src/main/webapp/static/less/notifications.less
@@ -5,71 +5,11 @@
 
 <h1 class="main-heading">Notifications</h1>
 
-Onboarding bubbles, modals and omnibar in-app notifications.
+Modals and toaster notifications.
 */
 
-@danger-text: @delete-button;
 @rounded-corner-radius: 15px;
 @max-modal-width: 400px;
-
-/*
-# Warnings
-*/
-
-.danger-heading {
-  color: @danger-text;
-}
-
-
-/*
-**************************************************************************
-# Onboarding
-
-```markup
-<div class="onboarding-bubble ng-scope">
-  <div class="instruction-text">
-    <p>type here what you want to <b>remember</b>, we'll take care of the rest</p>
-  </div>
-</div>
-```
-
-*/
-
-.onboarding-bubble {
-  position: relative;
-  border: 1px solid @instruction;
-  border-radius: @rounded-corner-radius;
-  padding: 20px 10px;
-  text-align: center;
-  line-height: normal;
-  span {
-    color: @instruction;
-  }
-}
-
-.onboarding-bubble:after, .onboarding-bubble:before {
-  bottom: 100%;
-  left: 15%;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
-  position: absolute;
-}
-
-.onboarding-bubble:after {
-  border-color: rgba(255, 255, 255, 0);
-  border-bottom-color: white;
-  border-width: 15px;
-  margin-left: -15px;
-}
-.onboarding-bubble:before {
-  border-color: rgba(255, 255, 255, 0);
-  border-bottom-color: @instruction;
-  border-width: 16px;
-  margin-left: -16px;
-}
-
 
 /*
 **************************************************************************
@@ -106,57 +46,6 @@ TODO: Modals will be gone soon?
 #modalFooter {
   button[disabled].normal-button {
     color: white;
-    background-color: @default-button-pressed;
+    background-color: @color-default-pressed;
   }
 }
-
-/*
-**************************************************************************
-# Toaster notification
-TODO: Example needed
-*/
-
-.toaster-notification {
-  max-width: @one-column-grid-width;
-  margin: auto;
-  position: fixed;
-  bottom: @vertical-grid-half;
-  height: @vertical-grid;
-  left: @horizontal-grid;
-  right: @horizontal-grid;
-  background-color: @normal-button-disabled;
-  padding-left: 15px;
-  span, a {
-    padding: 0;
-  }
-  a.toaster-x-mark {
-    padding-right: 15px;
-  }
-}
-
-.toaster-notification.ng-enter, .toaster-notification.ng-leave,
-.pikaday-animation.ng-enter, .pikaday-animation.ng-leave,
-.select-list-visible-animation.ng-enter {
-  -webkit-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
-  -moz-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
-  -o-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
-  -ms-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
-  transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
-}
-
-.toaster-notification.ng-enter,
-.toaster-notification.ng-leave.ng-leave-active,
-.pikaday-animation.ng-enter,
-.pikaday-animation.ng-leave.ng-leave-active,
-.select-list-visible-animation.ng-enter {
-  opacity: 0;
-}
-
-.toaster-notification.ng-leave,
-.toaster-notification.ng-enter.ng-enter-active,
-.pikaday-animation.ng-leave,
-.pikaday-animation.ng-enter.ng-enter-active,
-.select-list-visible-animation.ng-enter.ng-enter-active {
-  opacity: 1;
-}
-
